# 3515.games

./: .dockerignore  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  COPYING  COPYRIGHT  Dockerfile  README.md  RELEASING.md  api.py  bot.py  dockerfile.sh  entrypoint.sh  gps.py  heroku.yml  keyboard.py  license-info.md  licenses.json  licenses.md  licensor.py  main.py  mkdocs.yml  poet.py  pyproject.toml  railway.toml  settings.py  uptime.py
.github/ISSUE_TEMPLATE/: 0_privileged.yml  1_bug_report.yml  2_broken_link_.yml  config.yml
.github/workflows/: dependabot.yml  deploy.yml  docs.next.yml  docs.yml  merge.yml  pr.yml  pre-commit-autoupdate.yml  privilege.yml
bot/: bot.py  clockworks.py  keyboard.py  main.py
bot/cogs/: __init__.py  base.py
bot/cogs/cah/: cog.py  helpers.py  views.py
bot/cogs/cah/assets/: packs.txt
bot/cogs/cah/assets/templates/: create-game.md  game-start.md  lobby-open.md
bot/cogs/cah/models/: __init__.py  cards.py  game.py  player.py
bot/cogs/chess/: __init__.py  cog.py  helpers.py  models.py  views.py
bot/cogs/chess/assets/templates/: game-start.md
bot/cogs/claris/: __init__.py  cog.py  models.py
bot/cogs/claris/assets/templates/: create-game.md
bot/cogs/misc/: cog.py  views.py
bot/cogs/misc/assets/: pronouns.toml
bot/cogs/misc/assets/pages/: credits.md
bot/cogs/misc/assets/pages/legal/: ip.md
bot/cogs/misc/assets/templates/: about.md
bot/cogs/rps/: __init__.py  cog.py  models.py  views.py
bot/cogs/shogi/: __init__.py  cog.py  helpers.py  models.py  views.py
bot/cogs/shogi/assets/templates/: create-game.md  invalid-move.md
bot/cogs/uno/: cog.py  helpers.py  views.py
bot/cogs/uno/assets/: uno_card_emotes.toml
bot/cogs/uno/assets/templates/: create-game.md  game-over.md  game-start.md
bot/cogs/uno/models/: card.py  game.py  player.py  status.py
bot/database/: models.py
bot/settings/: __init__.py  base.py
bot/settings/dev/: dev.py
bot/settings/prd/: prd.py
bot/shrine/: __init__.py  kami.py  torii.py
bot/support/: __init__.py  helpers.py  views.py
bot/support/models/: __init__.py  commands.py  games.py  pronouns.py  utils.py
cogs/: README.md  __init__.py  cogs.py  generic.py
cogs/about/: README.md  __init__.py  views.py
cogs/about/assets/: licenses.json
cogs/about/assets/pages/: credits.md  legal.md  main.md
cogs/about/assets/pages/legal/: ip.md  privacy.md
cogs/cah/: __init__.py  cog.py  helpers.py  models.py  views.py
cogs/cah/assets/templates/: create-game.md  game-start.md  winning-submission.md
cogs/cah/models/: cards.py  game.py  player.py
cogs/chess/: __init__.py  cog.py  helpers.py  models.py  views.py
cogs/chess/assets/templates/: game-start.md  invalid-move.md
cogs/misc/: __init__.py  cog.py  views.py
cogs/misc/assets/pages/legal/: oss.md
cogs/rps/: README.md  __init__.py  classes.py  cog.py  models.py  views.py
cogs/rps/files/: rps_intro_gifs.json
cogs/uno/: __init__.py  classes.py  cog.py  decorators.py  functions.py  helpers.py  models.py  views.py
cogs/uno/assets/: uno_card_emotes.toml
cogs/uno/assets/templates/: create-game.md  game-start.md  lobby-open.md
cogs/uno/files/: uno_card_emotes.json  uno_start_lines.txt
cogs/uno/models/: __init__.py  card.py  game.py  player.py  status.py
database/: __init__.py  models.py
docs/: .README.md  README.md  index.md  reference.md
docs/.licenses/: MIT.md
docs/.overrides/: 404.html  main.html
docs/.overrides/partials/: copyright.html  footer.html  header.html  nav.html
docs/assets/stylesheets/: admonitions.css  extra.css
docs/changelog/: index.md
docs/commands/: index.md
docs/games/: cah.md  chess.md  index.md  rps.md  uno.md
docs/games/features/: pronouns.md  voice.md
docs/hosting/: docker.md  doppler.md  environment.md  i.md  ii.md  iii.md  index.md  intro.md  iv.md  prologue.md  railway.md  registration.md  v.md
docs/legal/: LICENSE.md  acknowledgements.md  index.md  license.md  privacy.md  terms.md
docs/overrides/: 404.html
docs/overrides/partials/: header.html
docs/stylesheets/: extra.css
kurisu/: README.md  __init__.py  cli.py  docs.py  helpers.py  kurisu.py  prompts.py  settings.py
kurisu/assets/: acknowledgements.md
kurisu/assets/templates/: copyright.jinja
kurisu/templates/static/: copyright.txt
settings/: __init__.py  base.py
settings/configs/: prd.py
settings/envs/: __init__.py  dev.py  prd.py  prod.py
settings/envs/dev/: __init__.py  dev.py
settings/envs/prd/: prd.py
shrine/: __init__.py  kami.py  torii.py
src/: bot.py  clock.py  clockworks.py  main.py
src/cogs/: __init__.py  base.py
src/cogs/cah/: __init__.py  cog.py  helpers.py  views.py
src/cogs/cah/models/: cards.py  game.py  player.py
src/cogs/chess/: cog.py  helpers.py  models.py
src/cogs/misc/: __init__.py  cog.py  views.py
src/cogs/misc/assets/pages/legal/: privacy.md
src/cogs/rps/: models.py
src/cogs/uno/: __init__.py  cog.py  views.py
src/cogs/uno/models/: card.py  game.py  status.py
src/database/: __init__.py
src/kurisu/: __init__.py  kurisu.py  settings.py
src/kurisu/assets/templates/: settings.py.jinja
src/settings/: __init__.py
src/shrine/: kami.py
src/support/: helpers.py
src/support/models/: games.py  utils.py
support/: README.md  __init__.py  assets.py  classes.py  functions.py  helpers.py  models.py  views.py
support/models/: commands.py  games.py  pydantic.py  utils.py
tinkering/: getting-started.md  secrets.md
