[tool.poetry]
name = "3515.games"
version = "0.0.0"
description = ""
authors = ["celsiusnarhwal <hello@celsiusnarhwal.dev>"]
packages = [{ include = "bot" }]

[tool.poetry.dependencies]
python = "^3.11.1"
alianator = "^4.0.1"
attrs = "^22.2.0"
chess = "^1.9.0"
dict-deep = "^4.1.2"
elysia = "^1.0.1"
humanize = "^4.0.0"
inflect = "^6.0.2"
jinja2 = "^3.1.2"
jinja2-simple-tags = "^0.4.1"
llist = "^0.7.1"
nest-asyncio = "^1.5.6"
nltk = "^3.7"
ordered-set = "^4.1.0"
orjson = "^3.8.6"
path = "^16.4.0"
pendulum = "^2.1.2"
pony = "^0.7.16"
psycopg2 = "^2.9.3"
py-cord = "^2.1.1"
pydantic = "^1.10.2"
PyGithub = "^1.55"
sortedcontainers = "^2.4.0"
svglib = "^1.4.1"
tomlkit = "^0.11.6"
wonderwords = "^2.2.0"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.11.2"
doppler-env = "^0.3.0"
gitpython = "^3.1.29"
halo = "^0.0.31"
marko = "^1.3.0"
pip-licenses = "^4.0.3"
pyperclip = "^1.8.2"
rich-tracebacks = "^1.2.1"
semver = "^2.13.0"
typer = { extras = ["all"], version = "^0.7.0" }

[tool.poetry.group.docs.dependencies]
cairosvg = "^2.6.0"
mkdocs-git-committers-plugin-2 = "^1.1.1"
pillow = "^9.4.0"
mkdocs-material = { git = "https://github.com/squidfunk/mkdocs-material-insiders" }

[tool.poetry.group.repl.dependencies]
ipython = "^8.11.0"

[tool.poetry.scripts]
kurisu = "kurisu.cli:app"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.poe.tasks]
format = { shell = "for hook in black prettier isort; do pre-commit run $hook --all-files; done" }
docs = { shell = "mkdocs serve" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
